--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ button {
     outline: none;
     padding: 10px;
     cursor: pointer;
+    border-radius: 7px;
 }
 
 .list {
@@ -48,7 +49,8 @@ button {
     width: 30%;
     align-items: center;
     margin: 20px 0;
-    
+    height: 300px;
+    overflow: scroll;
 }
 
 .task {
